--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .main-image{
@@ -25,5 +25,6 @@
 }
 
 .flippable-circle:hover {
-    transform: translateX(-50%) rotateY(180deg);
+    /* transform: translateX(-50%) rotateY(180deg); */
+    transform: translateX(-50%) rotate(180deg);
 }
