--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     /* margin-top: 250px; */
     text-align: center;
     color: white;
-    font-family: 'Quicksand';font-size: 70px;
+    font-family: 'Quicksand'; font-size: 70px;
 
 }
 
@@ -76,6 +76,7 @@
     width: 50vw;
     padding-bottom: 50px;
     border-bottom:2px solid #1E2F3C;
+    text-align: justify;
 }
 
 .circle-background{
